--- a/assets/frontend/index-3.html
+++ b/assets/frontend/index-3.html
@@ -138,6 +138,11 @@
     </header>
     <!-- header END -->
     
+    <!-- content start -->
+    
+    <!-- content end -->
+
+
 	<!-- Footer -->
     <footer class="site-footer">
         <div class="footer-top">
