--- a/assets/frontend/index-3.html
+++ b/assets/frontend/index-3.html
@@ -139,7 +139,7 @@
     <!-- header END -->
     
     <!-- content start -->
-    
+
     <!-- content end -->
 
 
@@ -151,7 +151,7 @@
 					<div class="col-xl-5 col-lg-4 col-md-12 col-sm-12">
                         <div class="widget">
                             <img src="images/logo_1_.png" width="250" class="m-b15" alt=""/>
-							<p class="text-capitalize m-b20">Lorem Ipsum is simply dummy text of the printing and typesetting industry has been the industry's standard dummy text ever since the..</p>
+							<p class="text-capitalize m-b20">sistem informasi pasar kerja balai latihan kerja surakarta menyediakan </p>
                             <div class="subscribe-form m-b20">
 								<form class="dzSubscribe" action="http://job-board.w3itexperts.com/xhtml/script/mailchamp.php" method="post">
 									<div class="dzSubscribeMsg"></div>
